--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-session": "^1.17.2",
+    "mongodb": "^4.1.1",
+    "mongoose": "^6.0.2",
     "passport": "^0.4.1",
     "passport-google-oauth2": "^0.2.0"
   }
