--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "nodemon": "^2.0.12"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "mongodb": "^4.1.1",
