--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
+    "googleapis": "^39.2.0",
     "mongodb": "^4.1.1",
     "mongoose": "^6.0.2",
     "passport": "^0.4.1",
