--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "googleapis": "^39.2.0",
+    "http-proxy-middleware": "^2.0.1",
     "mongodb": "^4.1.1",
     "mongoose": "^6.0.2",
     "passport": "^0.4.1",
