--- a/backend/package.json
+++ b/backend/package.json
@@ -13,12 +13,13 @@
     "nodemon": "^2.0.12"
   },
   "dependencies": {
+    "axios": "^0.21.3",
+    "cookie-parser": "^1.4.5",
     "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "googleapis": "^39.2.0",
-    "http-proxy-middleware": "^2.0.1",
     "mongodb": "^4.1.1",
     "mongoose": "^6.0.2",
     "passport": "^0.4.1",
