--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
+/backend/credentials.json
+/backend/token.json
 /backend/node_modules
 /backend/.env
 /client/node_modules
