--- a/backend/package.json
+++ b/backend/package.json
@@ -22,7 +22,10 @@
     "googleapis": "^39.2.0",
     "mongodb": "^4.1.1",
     "mongoose": "^6.0.2",
+    "node-gmail-api": "^1.0.0",
     "passport": "^0.4.1",
-    "passport-google-oauth2": "^0.2.0"
+    "passport-google-oauth2": "^0.2.0",
+    "request": "^2.88.2",
+    "twilio": "^3.69.0"
   }
 }
